Fix Bug causing Overflow

--- a/src/components/BodyContainer/BodyContainer.sass
+++ b/src/components/BodyContainer/BodyContainer.sass
@@ -5,7 +5,7 @@
     display: flex
     justify-content: center
     align-items: center
-    height: 100vh
+    min-height: 100vh
 
 .container
     max-width: 1140px
